syntax = "proto3";

package com.teamdev.jxbrowser.task;

import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";
import "task.proto";

service TaskService {
  rpc GetTasks(google.protobuf.Empty) returns (TasksResponse);
  rpc AddTask(Task) returns (google.protobuf.BoolValue);
}

message TasksResponse {
  repeated Task tasks = 1;
}
